<?xml version="1.0"?>
<package format="2">
  <name>formation_controller</name>
  <version>0.0.0</version>
  <description>formation_controller</description>
  <maintainer email="tlab@tlab.com">Matthew Woo and Zhengtian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>common_msgs</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>common_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- Helps to enable those precompiled cmake modules -->
  <build_depend>cmake_modules</build_depend>

  <export>
  </export>
</package>
